<resources>
    <string name="app_name">WalmartS</string>
    <string name="sign_my_acc">Sign in to your account</string>
    <string name="email">Email address (required)</string>
    <string name="passport">Passport (required)</string>
    <string name="forgot_pass">Forgot passport?</string>
    <string name="no_account">Don\'t have an account? </string>
    <string name="sign_in">Sign in </string>
    <string name="button">Create a new account</string>
    <string name="category">Shop by Categories</string>
    <string name="beauty">Beauty</string>
    <string name="food">Food</string>
    <string name="elect">Electronic</string>
    <string name="clothing">Clothing</string>
    <string name="firstname">First name*</string>
    <string name="lastname">Last name*</string>
    <string name="addemail">Email address*</string>
    <string name="createacc">Create Account*</string>
    <string name="pass">Password*</string>
    <string name="passreq"> *required field</string>
    <string name="createnewacc">Create your account</string>
</resources>