<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/image"
        android:layout_width="232dp"
        android:layout_height="51dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/walmart" />

    <TextView
        android:id="@+id/sign_my_acc"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:text="@string/sign_my_acc"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sign_my_acc">

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/etusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/passport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passport" />

        <EditText
            android:id="@+id/etpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/click"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            app:backgroundTint="@color/wall"
            android:onClick="signInImpilicit"/>

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:autoLink="all"
            android:text="@string/forgot_pass"
            android:textAlignment="viewEnd"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/gray"
                app:layout_constraintTop_toTopOf="@+id/no_account"></RelativeLayout>

            <TextView
                android:id="@+id/no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textAlignment="center"
                android:textSize="16sp"
                android:background="@color/white"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:text="@string/button"
            android:onClick="createacc"
            android:textColor="@android:color/holo_blue_dark"
            app:backgroundTint="@android:color/white" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>





